<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.bignerdranch.android.riderstavern.MainActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        app:cardElevation="36dp"
        app:cardMaxElevation="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:elevation="34dp"
            android:fontFamily="@font/sweet_handwrite"
            android:text="@string/header_text"
            android:textColor="@color/header_text_color"
            android:textStyle="bold"
            android:textSize="44sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:paddingLeft="8dp"
            android:fontFamily="@font/sweet_handwrite"
            android:text="@string/sub_header_text"
            android:textColor="@color/header_text_color"
            android:textSize="26sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/background_color"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_website" />

                    <TextView
                        android:id="@+id/website_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="6dp"
                        android:text="@string/website_address"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/separator_line_margine_left"
                    android:alpha="0.5"
                    android:background="@color/separator_line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_phone" />

                    <TextView
                        android:id="@+id/phone_number_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="6dp"
                        android:text="@string/phone_number"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/separator_line_margine_left"
                    android:layout_marginRight="84dp"
                    android:alpha="0.5"
                    android:background="@color/separator_line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_inbox" />

                    <TextView
                        android:id="@+id/email_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="6dp"
                        android:text="@string/email_address"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/separator_line_margine_left"
                    android:alpha="0.5"
                    android:background="@color/separator_line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_facebook" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_twitter" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_youtube" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/separator_line_margine_left"
                    android:alpha="0.5"
                    android:background="@color/separator_line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_map_pin" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:src="@drawable/ic_twitter">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/address_line1"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/address_text_size" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/address_line2"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/address_text_size" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/address_line3"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/address_text_size" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/address_line4"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/address_text_size" />

                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/separator_line_margine_left"
                    android:alpha="0.5"
                    android:background="@color/separator_line_color" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_color" />

        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-11dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bulldog"
            android:src="@drawable/img_cartoon" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="@color/background_color"
        android:src="@drawable/img_busy_hours" />
</LinearLayout>
